tests/baselines/reference/decoratorOnClassProperty10(strict=true).errors.txt
decoratorOnClassProperty10.ts(4,12): error TS7008: Member 'prop' implicitly has an 'any' type.


==== decoratorOnClassProperty10.ts (1 errors) ====
    declare function dec(): <T>(target: any, propertyKey: string) => void;
    
    class C {
        @dec() prop;
               ~~~~
!!! error TS7008: Member 'prop' implicitly has an 'any' type.
    }